@@ -418,7 +418,7 @@ public class CachedHashMapTest {
     @Test
     public void putIfAbsent() {
         //noinspection UnnecessaryBoxing
-        Integer integer = new Integer(234);
+        Integer integer = Integer.valueOf(1000);
         assertNull(map.putIfAbsent(1, integer));
         assertSame(integer, map.putIfAbsent(1, integer));
     }
@@ -426,7 +426,7 @@ public class CachedHashMapTest {
     @Test
     public void putIfAbsentWithTime() {
         //noinspection UnnecessaryBoxing
-        Integer integer = new Integer(234);
+        Integer integer = Integer.valueOf(1000);
         assertNull(map.putIfAbsent(1, integer, 1));
         assertSame(integer, map.putIfAbsent(1, integer));
         assertEquals(1, map.getPeriod(1));
